--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url '.'",
-    "start": "node server/website-server.js"
+    "build": "parcel build src/index.html --public-url '.'"
   },
   "keywords": [],
   "author": "",
@@ -26,9 +25,6 @@
     "prettier": "^2.3.2"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongodb": "^4.1.3",
-    "node-fetch": "^2.6.5",
     "parcel": "^2.0.0-rc.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
