--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
-    "@parcel/transformer-image": "^2.0.0-rc.0",
-    "@parcel/transformer-sass": "^2.3.2",
+    "@parcel/resolver-glob": "^2.7.0",
+    "@parcel/transformer-image": "^2.7.0",
+    "@parcel/transformer-sass": "^2.7.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "process": "^0.11.10"
   },
   "dependencies": {
-    "parcel": "^2.0.0-rc.0",
+    "parcel": "^2.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.3.0",
