fix screenshot path conflict

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -7,7 +7,7 @@
     "img": [
       {
         "alt": "ranger screenshot",
-        "src": "ranger-min"
+        "src": "range-min"
       }
     ],
     "desc": "I've visited a lot of the US National Parks over the last few years, and I wanted a way to visualize those trips, the parks I have and haven't been to, etc. Filter trips and/or parks, and display routes and locations on a Leaflet Mapbox map. Includes Passport/JWT auth layer enabling user sign-ups, and a full set of 63 custom-made parks icons."
