--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "example-app",
+  "name": "webspace",
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+    "format": "prettier --write \"src/**/*.{js,jsx,tsx}\"",
+    "lint": "eslint \"src/**/*.{js,jsx,tsx}\" --quiet",
     "dev": "parcel src/index.html",
+    "next-dev": "next dev",
     "build": "parcel build src/index.html --public-url '.'"
   },
   "keywords": [],
@@ -27,11 +28,15 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "next": "^13.1.6",
     "parcel": "^2.7.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.3.0",
-    "react-transition-group": "^4.4.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "react-transition-group": "^4.4.2",
+    "typescript": "^4.9.5"
   },
   "browserslist": [
     "defaults"
